api: 게시판 수정코드?

--- a/domain/src/main/resources/application.yaml
+++ b/domain/src/main/resources/application.yaml
@@ -5,3 +5,12 @@ spring:
   data:
     mongodb:
       uri: "mongodb://localhost:27017/board"
+
+logging:
+  level:
+    org:
+      springframework:
+        data:
+          mongodb:
+            core:
+              ReactiveMongoTemplate: DEBUG
