receiver: kafkareceiver 기본 설정

--- a/receiver/src/main/resources/application.yaml
+++ b/receiver/src/main/resources/application.yaml
@@ -4,3 +4,6 @@ spring:
     import: "optional:configserver:http://localhost:8090"
   main:
     webApplicationType: none
+kafka:
+  bootstrap-servers: localhost:9092
+  topic: "board-topic"
