--- a/config-server/src/main/resources/application.yaml
+++ b/config-server/src/main/resources/application.yaml
@@ -1,9 +1,4 @@
-server.port: 8090
-
 spring:
   cloud:
     config:
-      server:
-        git:
-          uri: "https://github.com/sup2is/kotlin-reactive-board/"
-          searchPaths: "config"
+      enabled: false
