--- a/batch/src/main/resources/application.yaml
+++ b/batch/src/main/resources/application.yaml
@@ -13,4 +13,4 @@ spring:
     url: "jdbc:mysql://localhost:3306/board?autoReconnect=true"
     username: root
     password: admin
-    driver-class-name: com.mysql.jdbc.Driver
+    driver-class-name: com.mysql.cj.jdbc.Driver
