batch: boardsnapshot batch test 작성중 ..

--- a/batch/src/main/resources/application.yaml
+++ b/batch/src/main/resources/application.yaml
@@ -9,6 +9,7 @@ spring:
   batch:
     job:
       enabled: false
+    initialize-schema: always
   datasource:
     url: "jdbc:mysql://localhost:3306/board?autoReconnect=true"
     username: root
